contact page fixed on mobile screen

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -3,11 +3,13 @@
   display: flex;
   flex-direction: column; /* Stack items vertically by default */
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  padding-bottom: 100px;
+  padding-top: 20px;
   height: 100vh;
   position: relative;
   gap: 20px;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 /* 🔹 Contact Title */
@@ -24,7 +26,7 @@
   justify-content: center;
   align-items: center;
   gap: 15px;
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
 /* 🔹 Social Icons */
